--- a/gb/22/10/14/n13845302.md
+++ b/gb/22/10/14/n13845302.md
@@ -41,31 +41,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9971114.md#1" target="_blank">文革中自杀的几个名人（6）留美学者陈梦家</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11273948.md#1" target="_blank">青年大法弟子：我们为何会坚持修炼如初</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10439090.md#1" target="_blank">严家伟：滥杀无辜草菅人命的“镇反运动”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/23/n10871086.md#1" target="_blank">绝处逢生 大陆法轮功学员谢师恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13892027.md#1">他的才思从哪里来？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897322.md#1">【菁英论坛】习政权最虚弱状态 惧政敌胜于民变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897103.md#1">【十字路口】跨年特别节目：2022年世界之最</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898142.md#1">【舞蹈】美国飞天大学舞蹈系中国古典舞基本功考试 中班 男生（2022年12月）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896722.md#1">【翻墙必看】传中共上将染疫 吃特效药身亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897095.md#1">岳山：习讲话不算数？七学者吁救民企 文章下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/19/n13887450.md#1">七种商品不再有 今年Costco有哪几个变化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896835.md#1">台娱圈新年首发喜弹 翁立友“已登记”不宴客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897308.md#1">蒙古族歌王拉苏荣病亡 曾多次为中共党魁演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897346.md#1">港星万梓良现身大陆商演 步履不稳需众人搀扶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896444.md#1">李钟硕与IU公开恋情 已交往4个多月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895820.md#1">周晓涵要求打戏来真的 曝陈亚兰不照剧本演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896498.md#1">党媒终于承认染疫后遗症 心肌炎多发于中青年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897182.md#1">新年伊始 世界各地有哪些奇特的传统？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897460.md#1">房贷利率连续下跌 11月售房量创12年来最低</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/20/n13888098.md#1">人际关系的隐形力量 “信任”是最重要因素</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/14/n13845302.htm">讽刺漫画引致政治打压 香港创作空间恐再收窄</a></p><hr>
