--- a/gb/23/2/21/n13934422.md
+++ b/gb/23/2/21/n13934422.md
@@ -12,7 +12,7 @@
 <p>“对于我们国际学院的领导团队来说，学生的安全和福祉仍是第一要务。</p>
 <p>“我们会继续与南澳警方密切合作，并采纳警方提供的所有建议。”</p>
 <p>在此两小时前，警方通过迅速调查，已查明了这次枪击威胁的始作俑者，是一名居住在Elizabeth Downs区的14岁男孩。</p>
-<p>警方称，该男孩在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E4%BA%A4%E5%AA%92%E4%BD%93.md#1">社交媒体</a>Snapchat（色拉布）上发布了一张骇人的手枪照片，并题为“向Playford（国际学院）开抢”。这张照片通过Snapchat在网络上传播，在社区引起巨大恐慌。</p>
+<p>警方称，该男孩在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E4%BA%A4%E5%AA%92%E4%BD%93.md#1">社交媒体</a>Snapchat（色拉布）上发布了一张骇人的手枪照片，并题为“向Playford（国际学院）开枪”。这张照片通过Snapchat在网络上传播，在社区引起巨大恐慌。</p>
 <p>警方将指控该男孩对这次威胁负责，并在他家中搜走一把水弹枪。</p>
 <p>警方在一份声明中表示，该男孩因制造不实言论和无证持有枪支而被举报，他将面临出庭受审。</p>
 <p>20日周一，一些家长决定不让孩子上学，而另一些家长通过<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A4%BE%E4%BA%A4%E5%AA%92%E4%BD%93.md#1">社交媒体</a>了解到这次枪击威胁后也赶到<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AD%A6%E6%A0%A1.md#1">学校</a>把孩子接走。</p>
@@ -36,37 +36,37 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/13/n13801472.md#1">卧龙岗伊拉瓦拉小学10岁男孩自杀身亡</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/2/n13815824.md#1">发表冒犯性言论 悉尼著名私校学生被开除</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/10/n13882390.md#1">15岁少年被控商业贩毒 南澳史上最年轻嫌犯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933675.md#1">南澳两联邦议员证实办公室摄像头产自中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932311.md#1">阿德莱德机场2050愿景：直飞全球37市</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964080.md#1">一女生荡秋千受重伤 南澳拟对游乐设施安检</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964045.md#1">阿德莱德将建250套出租公寓 南澳首例</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11398383.md#1" target="_blank">人权组织执行主任：一起曝光中共邪恶罪行</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/6/n11029000.md#1" target="_blank">林辉：救了毛周的人 结局大多很惨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">李洪志先生传法15年重要史实及辉煌历程</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933053.md#1">情缘未了 美高中生车祸身亡转生女友儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927255.md#1">【百年真相】部长级高官病亡 悼文捅出惊天黑幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926855.md#1">【救世古鉴】通过色欲门考验  他走过生死关得后福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932359.md#1">【未解之谜】来自星星的孩子（2）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13929957.md#1">【未解之谜】来自星星的孩子（1）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933670.md#1">【财商天下】中国经济依然虚弱 魔鬼藏在结构里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933656.md#1">【菁英论坛】白发革命震撼全国 中共面临危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13934185.md#1">【新闻大家谈】名人密集“被消失”有何内幕？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933226.md#1">江西三名警务人员查酒驾 全被嫌疑人刺死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13932976.md#1">王毅慕尼黑讲话企图分裂美欧 反遭嘲讽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933167.md#1">马云现身澳大利亚 消息冲上热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932882.md#1">杜琪峯柏林影展抨击独裁 相关微博账号遭封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932218.md#1">纪录片《被偷走的国家》 揭中共一带一路陷阱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932272.md#1">梁朝伟低调访台 首映会上一句话现社交恐惧症</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932186.md#1">《“鬼灭之刃”上弦集结，前进刀匠村》影评：承先启后 为新故事提前热身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933589.md#1">写春联钦点“有缘人”周星驰在越南招募演员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931268.md#1">计划夏天出国旅游吗？这些事你要知道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932109.md#1">卷心菜护肠胃壮筋骨 一吃法好处更多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/18/n13932465.md#1">房贷利率反弹 购房和再融资需求暴跌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932112.md#1">用餐新选择 麦当劳将推出素食麦克鸡块</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932028.md#1">罐头果汁妙用多 教你12个好味吃法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/21/n13934422.htm">阿市一学校受枪击威胁 一14岁男孩被指控</a></p><hr>
