--- a/gb/21/4/11/n12872483.md
+++ b/gb/21/4/11/n12872483.md
@@ -27,31 +27,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/10/n11176292.md#1" target="_blank">【征文】田园：《资治通鉴》中的传统智慧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10578907.md#1" target="_blank">【细语人生】见证大法的神奇（13）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864143.md#1" target="_blank">毛泽东诗词中的抄袭现象</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/8/n11708865.md#1" target="_blank">香港立法会议员胡志伟：很佩服法轮功学员</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897321.md#1">【百年真相】“子承父业” 汉奸江泽民卖国实录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897476.md#1">一代娥眉惹风流 薛涛枇杷门巷后的人生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900965.md#1">充满神话与力量：安东尼奥?卡诺瓦的雕塑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905330.md#1">【晚间新闻】广州男开宝马车撞人致18死伤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13904949.md#1">【环球直击】跟踪威胁民主人士 中国留学生被诉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13904954.md#1">【中国禁闻】专访闫丽梦：中国真实染疫死亡数令人震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903383.md#1">赵立坚被调职是遭边缘化？专家分析缘由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900221.md#1">辉瑞Paxlovid未纳入中国医保 谈判内幕曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903231.md#1">傅政华出镜有蹊跷 习放狠话 孟建柱还有事？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903390.md#1">与林宥嘉结婚6周年 丁文琪铁婚纪念文引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13904067.md#1">与修杰楷结婚8年 贾静雯形容婚姻是修炼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13904014.md#1">65岁中国导演何平病亡 曾出演《建党伟业》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903326.md#1">杨紫琼获美国评协奖影后 45年来首位亚洲女星</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13904104.md#1">陈奕迅拍《盲婚哑嫁》MV 歌词充满天命感</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894433.md#1">8种好零食 每天吃一把死亡风险降20%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903175.md#1">不止消炎助消化 每天喝芦荟汁的9个理由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903681.md#1">调查：总是感到内心安宁 世界排名前10个国家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903984.md#1">美研究员3D打印眼部组织 助了解黄斑变性成因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900962.md#1">设闹钟有秘诀 这样做包你不再被响铃惊醒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/11/n12872483.htm">又一起 港人接种科兴疫苗死亡案累计14宗</a></p><hr>
