--- a/gb/22/9/12/n13823052.md
+++ b/gb/22/9/12/n13823052.md
@@ -34,45 +34,45 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947662.md#1">美国硅谷银行倒闭?澳四大银行股价下挫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947655.md#1">悉尼铁路员工赢得1%额外加薪 高于涨薪上限</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947572.md#1">澳首府城市空置率创新低 房租或持续上涨</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947320.md#1">虚假陈述客户权利 澳最大在线书店被罚600万</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947370.md#1">组图：悉尼列车因故障停驶 影响数万名乘客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13946966.md#1">邮轮旅客带植物入澳未申报 遭罚3300元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946911.md#1">谷歌澳洲拟测试无人机新装置 取送咖啡和外卖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947008.md#1">澳印签署学历互认协议 鼓励印度学生来澳留学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947104.md#1">调查发现 澳逾半数司机面临汽车保费上涨</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947084.md#1">未注明牛奶过敏原 一款受欢迎黑啤酒被召回</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964052.md#1">Woolworths复活节前削减龙虾等海鲜价格</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964080.md#1">一女生荡秋千受重伤 南澳拟对游乐设施安检</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964045.md#1">阿德莱德将建250套出租公寓 南澳首例</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963565.md#1">F1澳洲站：比赛事故频发 维斯塔潘顺利登顶</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963654.md#1">1.5万人感染流感 患病高峰或提前到来</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963561.md#1">百年不遇 工党从反对党手中夺走补选席位</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963489.md#1">西澳州长将率贸易代表团访问中国</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963443.md#1">自由党保住关键两席 工党无法组成多数政府</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963469.md#1">阿德莱德火车与有轨电车回归政府公有</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962958.md#1">阿市兰道街着手打造首个夜间娱乐好去处</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/4/n11088075.md#1" target="_blank">野狐一禅：刻我心碑上的右派精英</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048859.md#1" target="_blank">《苦菜花》人物原型的真实人生（5）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/30/n9338788.md#1" target="_blank">一张10年前的病历让湖北仙桃拘留所放人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13942716.md#1">【未解之谜】从破案到预言 为什么梦如此神奇？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933872.md#1">诗：聆听创世主的雷音 ⑴⑵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947534.md#1">【马克时空】 中共最忌惮美星链和便携式导弹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946894.md#1">【环球直击】李卓人狱中受伤 妻子回港探望被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947607.md#1">【秦鹏观察】习近平连任 黄沙漫卷 股市飘绿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946483.md#1">分析：习为何警告宁德时代勿孤军深入</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946079.md#1">北京流感病例暴增 发烧门诊大排长龙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946586.md#1">中共窃F-22战机机密 抄袭美技术制造歼-20</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946022.md#1">疑违反奥斯卡规定 杨紫琼急删争议帖文</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945948.md#1">刘德华被《流水落花》换角 郑秀文曝背后原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13945246.md#1">包包吊着苹果挂饰 杨幂命名“包蘋安”引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946900.md#1">陆男团偶像徐炳超消失半年 街头卖包子上热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945930.md#1">依然怀念演员生活 黎姿首曝15年前息影原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/4/n13943029.md#1">高度加工食物成瘾罹癌更致命 专家：3个方法戒断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945826.md#1">补充蛋白质 11种常见食物价格亲民又实惠</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944906.md#1">典型毒亲事例之一：令孩子感到恐惧的虐待</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945618.md#1">为什么洗澡或散步时会出现灵感？ 专家释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943664.md#1">都是冰淇淋 香草与法式香草有什么不同？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/12/n13823052.htm">数据：全澳1652家托儿机构未经政府评估</a></p><hr>
